chore: fixed sort dropdown alignment

--- a/packages/p2p/src/components/buy-sell/sort-dropdown.scss
+++ b/packages/p2p/src/components/buy-sell/sort-dropdown.scss
@@ -1,6 +1,6 @@
 .sort-dropdown {
     height: 4.4rem;
-    margin: 2.4rem 0;
+    margin: 2.4rem 0 !important;
     width: 24rem;
 
     .dc-dropdown__display {
